--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@
     background-color: #1b5e20;
 }
 .warna-kuning-gelap {
-    background-color: #ff6f00;
+	background-color: #ff6f00;
 }
 .warna-grey-sedikit {
     background-color: #f4f4f4;
@@ -110,6 +110,11 @@ div ul.icon-saya li.tambah{
 }
 .pagination li.active{
     background-color: #1b5e20;
+}
+
+/* isi konten produk btn selengkapnya */
+.btn-selengkapnya {
+	padding: 0 0.8rem !important;
 }
 
 /*masuk-login*/
